front-end/src/main/resources/static/css/style.css
.error-page {
    max-width: 100%;
    text-align: center;
    margin-top: 10%;
}

.post-comments {
    width: 100%;
}

.fa.fa-lock {
    font-size: 25px;
    color: red;
}

.profile-information > .profile-username {
    text-align: center;
    font-weight: bold;
}

.right-frame-post-header {
    float: right;
}

.post-header, .stars, .post-content {
    flex: 1 100%;
}

.flex-container {
    display: flex;
    flex-flow: row wrap;
}

.flex-item {
    align-self: center;
}

.not-logged-top-menu {
    color: white;
    margin: auto;
}

#submit-pass-change-form {
    margin: auto;
}

.acknowledge-message {
    color: #28a745;
}

.error-message {
    color: #dc3545;;
}

.profile-card-flat {
    display: flex;
    flex-flow: row;
    flex: auto;
    justify-content: space-between;
}

.profile-username a:hover {
    text-decoration: none;
}

#noMorePosts {
    text-align: center;
}

/*TODO: This is not working.*/
.profile-show-more-button {
    margin: 0 auto;
    display: block;
}

.upload-btn-wrapper {
    position: relative;
    overflow: hidden;
    display: inline-block;
    margin: 5px auto auto;
}

.upload-btn-wrapper input[type=file] {
    font-size: 100px;
    position: absolute;
    left: 0;
    top: 0;
    opacity: 0;
}

body {
    background-color: #f7f7f9 !important;
}

.custom-container {
    margin-top: 15px;
}

.custom-box {
    margin-bottom: 15px;
}

.custom-button {
    margin-right: 10px;
}

.custom-textarea {
    overflow: hidden;
    min-height: 80px;
    width: 500px;
}

.image-post img {
    border-radius: 50%;
    object-fit: cover;
    width: 30px;
    height: 30px;
}

.my-posts, .column-card-header {
    background: #343a40;
    color: white;
}

.deletePostButton {
    margin-bottom: 3px;
}

#loginForm {
    /*max-width: 30%;*/
    max-width: 100%;
}

/*Star ranking*/
.stars input {
    position: absolute;
    left: -999999px;
}

.stars a {
    display: inline-block;
    padding-right: 4px;
    text-decoration: none;
    margin: 0;
    font-size: 0;
}

.stars a:hover {
    text-decoration: none;
}

.stars a:after {
    position: relative;
    font-size: 18px;
    font-family: 'FontAwesome', serif;
    display: block;
    content: "\f005";
    color: #9e9e9e;
}

.stars a:hover ~ a:after {
    color: #9e9e9e !important;
}

span.active a.active ~ a:after {
    color: #9e9e9e;
}

span:hover a:after {
    color: #ffd700 !important;
}

span.active a:after,
.stars a.active:after {
    color: #ffd700;
}

